--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "compile": "tsc",
+    "clean": "rm -rf dist",
     "build": "npm run clean && npm run compile",
     "prepublishOnly": "npm run build",
     "test": "npm run compile && jasmine dist/spec/*.js"
