--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name":        "circuit-breaker-js",
-  "description": "Hystrix-like circuit breaker for JavaScript.",
-  "version":     "0.0.1",
-  "license":     "MIT",
-
-  "author": "Yammer Inc. (http://www.yammer.com/)",
-
+  "name": "circuit-breaker-ts",
+  "description": "Hystrix-like circuit breaker for TypeScript.",
+  "version": "0.0.1",
+  "license": "MIT",
+  "author": "RenzHoly<renzholy@gmail.com>",
   "repository": {
     "type": "git",
-    "url":  "git@github.int.yammer.com:yammer/circuit-breaker-js.git"
+    "url": "git@github.com:jike-engineering/circuit-breaker-ts.git"
   },
-
-  "main": "circuit-breaker.js",
-
+  "main": "dist/circuit-breaker.js",
+  "types": "dist/circuit-breaker.d.ts",
+  "typings": "dist/circuit-breaker.d.ts",
   "devDependencies": {
-    "docco":                 "~0.6.2",
-    "express":               "~3.3.8",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-jasmine": "~0.5.1",
-    "grunt-contrib-jshint":  "~0.3.0"
+    "@types/jasmine": "2.8.6",
+    "jasmine": "3.1.0",
+    "typescript": "2.8.3"
   },
-
   "scripts": {
-    "test": "grunt"
+    "compile": "tsc",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && npm run compile",
+    "prepublishOnly": "npm run build",
+    "test": "npm run compile && jasmine dist/spec/*.js"
   }
 }
